reset

set term post enhanced color solid

set xtics 0.01
set y2tics
set ytics nomirror

set y2range [1980:3004]

set xlabel "time (s)"

set title "Temporal Evolution of Burning Layer"

unset key



set out "0.5cm_enucdot_evolution.ps"

set ylabel "max(enucdot) (erg/g/s)"
set y2label "y(max(enucdot)) (cm)"

plot "xrb_enuc_diag.out" u 1:2 w l, "xrb_enuc_diag.out" u 1:4 w l axis x1y2



set out "0.5cm_temp_evolution.ps"

set ylabel "max(temp) (K)"
set y2label "y(max(temp)) (cm)"

plot "xrb_temp_diag.out" u 1:2 w l, "xrb_temp_diag.out" u 1:4 w l axis x1y2
